--- a/bookmarks/account/templates/registration/login.html
+++ b/bookmarks/account/templates/registration/login.html
@@ -17,6 +17,7 @@
 			<input type="hidden" name="next" value="{{ next }}"/>
 			<p><input type="submit" value="Log-in"></p>
 		</form>
-		<p><a href="{% url "password_reset" %}">Forgotten your password?</a></p>
+		<p>Not a user? <a href="{% url "register" %}">Sign up!</a></p>
+		<p><a href="{% url "password_reset" %}">Forgot your password?</a></p>
 	</div>
 {% endblock %}
