--- a/bookmarks/account/templates/registration/login.html
+++ b/bookmarks/account/templates/registration/login.html
@@ -20,4 +20,9 @@
 		<p>Not a user? <a href="{% url "register" %}">Sign up!</a></p>
 		<p><a href="{% url "password_reset" %}">Forgot your password?</a></p>
 	</div>
+	<div class="social">
+		<ul>
+			<li class="google"><a href="{% url "social:begin" "google-oauth2" %}">Login with Google</a><li>
+		</ul>
+	</div>
 {% endblock %}
