--- a/bookmarks/account/templates/base.html
+++ b/bookmarks/account/templates/base.html
@@ -11,8 +11,8 @@
 		{% if request.user.is_authenticated %}
         <ul class="menu">
             <li {% if section == "dashboard" %}class="selected"{% endif %}><a href="{% url "dashboard" %}">My dashboard</a></li>
-            <li {% if section == "images" %}class="selected"{% endif %}><a href="#">Images</a></li>
-            <li {% if section == "people" %}class="selected"{% endif %}><a href="#">People</a></li>
+            <li {% if section == "images" %}class="selected"{% endif %}><a href="{% url "images:list" %}">Images</a></li>
+            <li {% if section == "people" %}class="selected"{% endif %}><a href="{% url "user_list" %}">People</a></li>
         </ul>
         {% endif %}
         
@@ -38,5 +38,25 @@
 		{% block content %}
 		{% endblock %}
 	</div>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+	<script src="http://cdn.jsdelivr.net/jquery.cookie/1.4.1/jquery.cookie.min.js"></script>
+	<script> 
+	var csrftoken = $.cookie('csrftoken');
+	function csrfSafeMethod(method) {
+		// these http methods do not require CSRF protection
+		return (/^(GET|HEAD|OPTIONS|TRACE)$/.test(method));
+		}
+	$.ajaxSetup({
+		beforeSend: function(xhr, settings) {
+		if (!csrfSafeMethod(settings.type) && !this.crossDomain) {
+			xhr.setRequestHeader("X-CSRFToken", csrftoken);
+		}
+		}
+	});
+	$(document).ready(function () {
+		{% block domready %}
+		{% endblock %}
+		});
+	</script>
 </body>
 </html>
