--- a/bookmarks/images/templates/images/image/detail.html
+++ b/bookmarks/images/templates/images/image/detail.html
@@ -14,9 +14,13 @@
 <div class="image-info">
 	<div>
 		<span class="count">
-		<span class="total">{{ total_likes }}</span>
-		like{{ total_likes|pluralize }}
+			<span class="total">{{ total_likes }}</span>
+			like{{ total_likes|pluralize }}
 		</span>	
+		<span class="count">
+			<span class="total">{{ total_views }}</span>
+			view{{ total_views|pluralize }}
+		</span>
 		<a href="#" data-id="{{ image.id }}"
 		data-action="{% if request.user in users_like %}un{% endif %}like"
 		class="like button">
